2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed ut_metadata total_size.
	* xmap.cc, xmap.h: (each_finished, exists) new methods.
	* network.cc, network.h: (set_compact(const char*,size_t)) new method.
	* Torrent.cc, Torrent.h: added ut_pex extension; remember if the torrent
	  is private; remember is a peer is upload_only; (Seed) new method;
	  set tracker error only if last URL failed; disallow huge packets.
	* network.cc, network.h: (is_compatible) new method.

2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed typo.
	* xstring.cc, xstring.h: (begins_with, instr, hexdump_to) new methods;
	  improved dump() for invalid utf8 strings.
	* xarray.h: (xqueue_p) new class.
	* Torrent.cc, Torrent.h: added timeout for tracker requests;
	  added support for tracker groups; new option --dht-bootstrap
	  for manual bootstrapping.
	* ftp-opie.c: use newer version from wget (fixes a bug on 64-bit hw).
	* xstring.cc, xstring.h: (hex_decode) new method.
	* Torrent.cc, Torrent.h: use hex_decode; allow pure hash instead of
	  magnet links; make tracker Fail if no valid URLs found.

2012-08-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor; Pack to xstring.
	* Filter.cc, Filter.h: (set_create_mode, set_lock) new methods,
	  do file locking if requested.
	* misc.cc, misc.h, attach.h: (get_nodename) new function.
	* xstring.cc, xstring.h: add explicit clone ctor; (move_here) new
	  method.
	* xmap.cc, xmap.h: (empty) new method; xmap_p now uses delete.
	* xarray.h: xarray_p now uses delete.
	* network.cc, network.h: (family, set_port, compact, compact_addr,
	  set_compact) new methods.
	* Torrent.cc, Torrent.h: add DHT and magnet support.

2012-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add mt_metadata extension.

2012-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor BeNode(const char *);