@@ -1,3 +1,7 @@
+2012-08-20  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* network.cc, network.h; make set_compact return bool.
+
 2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Torrent.cc: fixed ut_metadata total_size.
